--- a/gearTracker_website/tracker_app/templates/login.html
+++ b/gearTracker_website/tracker_app/templates/login.html
@@ -4,5 +4,21 @@
 
 <h1>Login</h1>
 
+
+<form action="{# {% url 'tracker_app:login_customer' %} #}" method="post">
+	{% csrf_token %}
+    
+    <label for="username">Username: </label>
+    <input id="username" type="text" name="username" value="">
+    
+    <label for="password">Password: </label>
+    <input id="password" type="password" name="password" value="">
+
+    <input type="submit" value="OK">
+
+</form>
+
+
+
 {% endblock %}
 
