camera is registered

--- a/gearTracker_website/tracker_app/templates/create_camera_model.html
+++ b/gearTracker_website/tracker_app/templates/create_camera_model.html
@@ -11,7 +11,7 @@
 
 		<select id="camera_make_id" name="camera_list">	
 			{% for camera in camera_make %}
-				<option value="{{camera.id}}">{{camera}}</option>
+				<option value="{{camera.id}}">{{camera.name}}</option>
 			{% endfor %}
 		</select>
 
@@ -20,7 +20,6 @@
 
 		<label for="purchase_date">Purchase Date: </label>
 		<input id="purchase_date" type="date" name="purchase_date" value="">
-
 
 		<input type="submit" value="OK">
 
