--- a/gearTracker_website/tracker_app/templates/create_lens_model.html
+++ b/gearTracker_website/tracker_app/templates/create_lens_model.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<h1>Register Lens</h1>
+	<h1>Lens Model</h1>
 
 	<form action="{% url 'tracker_app:camera' %}" method="post">
 		{% csrf_token %}
