initial data shows

--- a/gearTracker_website/tracker_app/templates/index.html
+++ b/gearTracker_website/tracker_app/templates/index.html
@@ -11,6 +11,25 @@
 
 	{% block content %}
 
+
+	<h2>Events</h2>
+		{% for e in event %}
+			<h3>{{e.name}}</h3>
+		{% endfor %}
+
+	<h2>Cameras</h2>
+		{% for c in camera %}
+			<h3>{{c.name}}</h3>
+		{% endfor %}
+
+	<h2>Lenses</h2>
+		{% for l in lens %}
+			<h3>{{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}</h3>
+		{% endfor %}
+
+
+
+
 	{% endblock%}
 
 </body>
