home shows only customer event

--- a/gearTracker_website/tracker_app/templates/index.html
+++ b/gearTracker_website/tracker_app/templates/index.html
@@ -4,9 +4,12 @@
 <head>
 	<title>Gear Tracker</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="{% static 'jumbotron-narrow.css' %}">
+	<link rel="stylesheet" href="{% static 'menu.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Hind+Guntur:400,700" rel="stylesheet">
 </head>
 <body>
+
+	<h1 align="center"> LOGO </h1>
 
 	{% include 'nav.html' %}
 
