pack gear showing

--- a/gearTracker_website/tracker_app/templates/create_photoshoot.html
+++ b/gearTracker_website/tracker_app/templates/create_photoshoot.html
@@ -9,7 +9,7 @@
 
 		<select id="event_id" name="event">	
 			{% for e in event %}
-				<option value="{{e.id}}">{{e.name}}</option>
+				<option value="{{e.event_id}}">{{e}}</option>
 			{% endfor %}
 		</select>
 
