--- a/gearTracker_website/tracker_app/templates/nav.html
+++ b/gearTracker_website/tracker_app/templates/nav.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         
-        <li><a href="#">Shoot</a></li>
+        <li><a href="{% url 'tracker_app:photoshoot' %}">Shoot</a></li>
         <li><a href="#">Gear</a></li>
         
         <li class="dropdown">
