--- a/gearTracker_website/tracker_app/templates/create_camera_make.html
+++ b/gearTracker_website/tracker_app/templates/create_camera_make.html
@@ -2,15 +2,22 @@
 
 {% block content %}
 
+<div id="" class="col-md-8 col-md-offset-3">
+	<div class="input-group">
+	
 	<h1>Create Camera Brand</h1>
 
 	<form action="{% url 'tracker_app:add-camera-make' %}" method="post">
 		{% csrf_token %}
 	    
+	    <div class="form-group">
 	    <label for="camera_make">Camera Make: </label>
-	    <input id="camera_make" type="text" name="camera_make" value="">
+	    <input id="camera_make" type="text" name="camera_make" value="" class="form-control">
+	    </div>
 
+	    <div class="padding-20">
 	    <input type="submit" value="OK">
+	    </div>
 
 	</form>
 
@@ -18,8 +25,11 @@
 	<h2>Camera Brands in DB</h2>
 
 		{% for camera in camera_make %}
-			{{camera.name}}
+			{{camera.name}}<br/>
 		{% endfor %}
+
+</div>
+</div>
 
 {% endblock %}
 
