--- a/gearTracker_website/tracker_app/templates/create_camera_model.html
+++ b/gearTracker_website/tracker_app/templates/create_camera_model.html
@@ -2,25 +2,35 @@
 
 {% block content %}
 
-	<h1>Register Camera</h1>
+<div id="" class="col-md-8 col-md-offset-3">
+<div class="input-group">
+	<h1>Add Camera</h1>
 
 	<form action="{% url 'tracker_app:camera' %}" method="post">
 		{% csrf_token %}
 
+		<div class="form-group">
 		<label for="camera_make">Make: </label>
 
-		<select id="camera_make_id" name="camera_list">	
+		<select id="camera_make_id" name="camera_list" class="form-control">	
 			{% for camera in camera_make %}
 				<option value="{{camera.id}}">{{camera.name}}</option>
 			{% endfor %}
 		</select>
+		</div>
 
+		<div class="form-group">
 		<label for="camera_model">Name: </label>
-		<input id="camera_model" type="text" name="camera_model" value="">
+		<input id="camera_model" class="form-control" type="text" name="camera_model" value="" placeholder="ie: D700">
+		</div>
 
-		<input type="submit" value="OK">
+		<div class="padding-20">
+			<input type="submit" value="OK">
+		</div>
 
 	</form>
+</div>
+</div>
 
 {% endblock %}
 
