--- a/gearTracker_website/tracker_app/templates/create_event.html
+++ b/gearTracker_website/tracker_app/templates/create_event.html
@@ -1,16 +1,23 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div id="" class="col-md-8 col-md-offset-3">
+	<div class="input-group">
+	
 
 	<h1>Create Event</h1>
 
 	<form action="{% url 'tracker_app:event' %}" method="post">
 		{% csrf_token %}
 	    
+	    <div class="form-group">
 	    <label for="event">Event Name: </label>
-	    <input id="event" type="text" name="event" value="">
+	    <input id="event" type="text" name="event" value="" class="form-control">
+	    </div>
 
+	    <div class="padding-20">
 	    <input type="submit" value="OK">
+	    </div>
 
 	</form>
 
@@ -18,8 +25,11 @@
 	<h2>Events in DB</h2>
 
 		{% for e in event %}
-			{{e.name}}
+			{{e.name}}<br/>
 		{% endfor %}
+
+</div>
+</div>
 
 {% endblock %}
 
