--- a/gearTracker_website/tracker_app/templates/create_event_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_event_gear.html
@@ -2,30 +2,41 @@
 
 {% block content %}
 
-	<h1></h1>
+<div id="" class="col-md-8 col-md-offset-3">
+<div class="input-group">
 
 	<form action="{% url 'tracker_app:event_gear' %}" method="post">
 		{% csrf_token %}
 
-	    <select id="event_id" name="event">	
+		<div class="form-group">
+		<h3>Event</h3>
+	    <select id="event_id" name="event" class="form-control">	
 			{% for e in event %}
 				<option value="{{e.id}}">{{e.name}}</option>
 			{% endfor %}
 		</select>
+		</div>
 
+		<div class="form-group">
 		<h3>Lens</h3>
 		{% for l in lens %}
-			<input type="checkbox" name="lens" value="{{l.id}}" />{{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}
+			<input type="checkbox" name="lens" value="{{l.id}}" /> {{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}<br/>
 		{% endfor %}
+		</div>
 
+		<div class="form-group">
 		<h3>Camera</h3>
 		{% for c in camera %}
-			<input type="checkbox" name="camera" value="{{c.id}}" />{{c.name}}
+			<input type="checkbox" name="camera" value="{{c.id}}" /> {{c.name}}<br/>
 		{% endfor %}
+		</div>
 
 	    <input type="submit" value="OK">
 
 	</form>
+
+</div>
+</div>
 
 {% endblock %}
 
