--- a/gearTracker_website/tracker_app/templates/create_lens_make.html
+++ b/gearTracker_website/tracker_app/templates/create_lens_make.html
@@ -1,16 +1,21 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div id="" class="col-md-8 col-md-offset-3">
+	<div class="input-group">
 
 	<h1>Create Lens Brands</h1>
-
 	<form action="{% url 'tracker_app:add-lens-make' %}" method="post">
 		{% csrf_token %}
 	    
+	    <div class="form-group">
 	    <label for="lens_make">Lens Make: </label>
-	    <input id="lens_make" type="text" name="lens_make" value="">
+	    <input id="lens_make" type="text" name="lens_make" value="" class="form-control">
+	    </div>
 
+	    <div class="padding-20">
 	    <input type="submit" value="OK">
+	    </div>
 
 	</form>
 
@@ -18,8 +23,11 @@
 	<h2>Lens Brands in DB</h2>
 
 		{% for lens in lens_make %}
-			{{lens.name}}
+			{{lens.name}}<br/>
 		{% endfor %}
+
+</div>
+</div>
 
 {% endblock %}
 
