--- a/gearTracker_website/tracker_app/templates/create_lens_model.html
+++ b/gearTracker_website/tracker_app/templates/create_lens_model.html
@@ -1,38 +1,54 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div id="" class="col-md-8 col-md-offset-3">
+	<div class="input-group">
 
 	<h1>Lens Model</h1>
 
 	<form action="{% url 'tracker_app:lens' %}" method="post">
 		{% csrf_token %}
 
+		<div class="form-group">
 		<label for="camera_make">Mount: </label>
-		<select id="camera_make_id" name="camera_list">	
+		<select id="camera_make_id" name="camera_list" class="form-control">	
 			{% for camera in camera_make %}
 				<option value="{{camera.id}}">{{camera.name}}</option>
 			{% endfor %}
 		</select>
+		</div>
 
+		<div class="form-group">
 		<label for="camera_make">Make: </label>
-		<select id="camera_make_id" name="lens_list">	
+		<select id="camera_make_id" name="lens_list" class="form-control">	
 			{% for lens in lens_make %}
 				<option value="{{lens.id}}">{{lens.name}}</option>
 			{% endfor %}
 		</select>
+		</div>
 
+		<div class="form-group">
 		<label for="min_focal">Min Focal: </label>
-		<input id="min_focal" type="text" name="min_focal" value="">
+		<input id="min_focal" type="text" name="min_focal" value="" class="form-control">
+		</div>
 
+		<div class="form-group">
 		<label for="max_focal">Max Focal: </label>
-		<input id="max_focal" type="text" name="max_focal" value="">
+		<input id="max_focal" type="text" name="max_focal" value="" class="form-control">
+		</div>
 
+		<div class="form-group">
 		<label for="aperature">Aperature: </label>
-		<input id="aperature" type="number" step="0.2" min="1" name="aperature" value="">
+		<input id="aperature" type="number" step="0.2" min="1" name="aperature" value="" class="form-control">
+		</div>
 
+		<div class="padding-20">
 		<input type="submit" value="OK">
+		</div>
 
 	</form>
 
+</div>
+</div>
 {% endblock %}
 
