--- a/gearTracker_website/tracker_app/templates/create_pack_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_pack_gear.html
@@ -1,6 +1,8 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div id="" class="col-md-8 col-md-offset-3">
+	<div class="input-group">
 
 <h2>Session Info</h2>
 	<p>Name: {{client_details.client_name}}</p>
@@ -13,15 +15,22 @@
 	<form action="{% url 'tracker_app:pack_gear' event.id %}" method="post">
 		{% csrf_token %}
 
+		<div class="form-group">
 		{% for c in camera %}
-			{{c.name}}<input type="checkbox" name="camera" value="{{c.id}}" />
+			<input type="checkbox" name="camera" value="{{c.id}}" /> {{c.name}} </br>
 		{% endfor %}
+		</div>
 		
+		<div class="form-group">
 		{% for l in lens %}
-			{{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}<input type="checkbox" name="lens" value="{{l.id}}"></br>
+			<input type="checkbox" name="lens" value="{{l.id}}"> {{l.lens_make}} {{l.min_focal_length}}-{{l.max_focal_length}} {{l.aperature}} <br/>
 		{% endfor %}
+		</div>
 
 		<input type="submit" value="OK">
 	</form>
+
+</div>
+</div>
 
 {% endblock %}
