--- a/gearTracker_website/tracker_app/templates/success.html
+++ b/gearTracker_website/tracker_app/templates/success.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
-<h1>SUCCESS</h1>	
+<h1>SUCCESS</h1>
+<a href="{% url 'tracker_app:index' %}">Return Home</a>
 
 {% endblock %}
