--- a/gearTracker_website/tracker_app/templates/nav.html
+++ b/gearTracker_website/tracker_app/templates/nav.html
@@ -16,16 +16,19 @@
       <ul class="nav navbar-nav">
         
         <li><a href="{% url 'tracker_app:photoshoot' %}">Shoot</a></li>
-        <li><a href="#">Gear</a></li>
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gear <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Camera</a></li>
+            <li><a href="#">Lens</a></li>
+            <li><a href="{% url 'tracker_app:list_gear' %}">view all gear</a></li>
           </ul>
         </li>
+
+        <li><a href="{% url 'tracker_app:login' %}">Login</a></li>
+        <li><a href="{% url 'tracker_app:logout' %}">Logout</a></li>
+
       </ul>
 
     </div><!-- /.navbar-collapse -->
