--- a/gearTracker_website/tracker_app/templates/create_return_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_return_gear.html
@@ -29,7 +29,7 @@
 	{% else %}
 		<h2>Return Gear</h2>
 
-		<form action="{% url 'tracker_app:return_gear' event.id %}" method="post">
+		<form action="{% url 'tracker_app:return_gear' client_details.id %}" method="post">
 		{% csrf_token %}
 
 		<div class="form-group">
