--- a/gearTracker_website/tracker_app/templates/home.html
+++ b/gearTracker_website/tracker_app/templates/home.html
@@ -18,6 +18,7 @@
 			{% for c in customer_photoshoot %}
 				<p>{{c.date}} - {{c.client_name}}</p>
 			{% endfor %}
+			<a href="#">link</a>
 		</div>
 		
 		<div class="col-md-4">
@@ -25,6 +26,7 @@
 			{% for c in camera %}
 				<p>{{c.camera_make.name}} {{c.name}}</p>
 			{% endfor %}
+			<a href="#">link</a>
 		 </div>
 		
 		<div class="col-md-4">
@@ -32,6 +34,7 @@
 			{% for l in lens %}
 				<p>{{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}</p>
 			{% endfor %}
+			<a href="#">link</a>
 		</div>
 	
 	</div>		 
