pack gear returns to same id

--- a/gearTracker_website/tracker_app/templates/create_pack_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_pack_gear.html
@@ -12,7 +12,7 @@
 
 <h2>Start Packing!</h2>
 
-	<form action="{% url 'tracker_app:pack_gear' event.id %}" method="post">
+	<form action="{% url 'tracker_app:pack_gear' client_details.id %}" method="post">
 		{% csrf_token %}
 
 		<div class="form-group">
