--- a/gearTracker_website/tracker_app/templates/create_camera_model.html
+++ b/gearTracker_website/tracker_app/templates/create_camera_model.html
@@ -18,6 +18,7 @@
 			{% endfor %}
 		</select>
 		</div>
+		 <a href="{% url 'tracker_app:add-camera-make' %}">Add Make</a>
 
 		<div class="form-group">
 		<label for="camera_model">Name: </label>
