--- a/gearTracker_website/tracker_app/templates/create_event_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_event_gear.html
@@ -16,6 +16,7 @@
 			{% endfor %}
 		</select>
 		</div>
+		<a href="{% url 'tracker_app:event' %}">Add Event Type</a>
 
 		<div class="form-group">
 		<h3>Lens</h3>
