--- a/gearTracker_website/tracker_app/templates/create_lens_model.html
+++ b/gearTracker_website/tracker_app/templates/create_lens_model.html
@@ -26,6 +26,7 @@
 			{% endfor %}
 		</select>
 		</div>
+		<a href="{% url 'tracker_app:add-lens-make' %}">Add Make</a>
 
 		<div class="form-group">
 		<label for="min_focal">Min Focal: </label>
