--- a/gearTracker_website/tracker_app/templates/create_photoshoot.html
+++ b/gearTracker_website/tracker_app/templates/create_photoshoot.html
@@ -19,6 +19,7 @@
 				{% endfor %}
 			</select>
 		</div>
+		<a href="{% url 'tracker_app:event_gear' %}">Add Event</a>
 
 
 		<div class="form-group">
