--- a/gearTracker_website/tracker_app/templates/home.html
+++ b/gearTracker_website/tracker_app/templates/home.html
@@ -1,24 +1,16 @@
 <div class="jumbotron">
 	<div class="container">
-		<h1>Hello, {{user.first_name}}!</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur.</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		<h1>Hello {{user.first_name}}!</h1>
 	</div>
 </div>
 
 <div class="container">
 	<div class="row">
-		
 		<div class="col-md-4">
 			<h2>Events</h2>
 			{% for c in customer_photoshoot %}
 				<p>{{c.date}} - {{c.client_name}}</p>
 			{% endfor %}
-			<a href="#">link</a>
 		</div>
 		
 		<div class="col-md-4">
@@ -26,7 +18,6 @@
 			{% for c in camera %}
 				<p>{{c.camera_make.name}} {{c.name}}</p>
 			{% endfor %}
-			<a href="#">link</a>
 		 </div>
 		
 		<div class="col-md-4">
@@ -34,7 +25,6 @@
 			{% for l in lens %}
 				<p>{{l.lens_make}} {{l.min_focal_length}} - {{l.max_focal_length}} {{l.aperature}}</p>
 			{% endfor %}
-			<a href="#">link</a>
 		</div>
 	
 	</div>		 
