--- a/gearTracker_website/tracker_app/templates/index.html
+++ b/gearTracker_website/tracker_app/templates/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-	<h1 align="center"><img src="{% static 'img/logo.png' %}" width="150px"></h1>
+	<h1 align="center">
+		<a href="{% url 'tracker_app:index' %}">
+		<img src="{% static 'img/logo.png' %}" width="150px"></h1>
+		</a>
 
 	{% include 'nav.html' %}
 
@@ -18,6 +21,8 @@
 		{% include 'home.html' %}
 
 	{% endblock%}
+
+	{% include 'footer.html' %}
 
 <script
   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
