--- a/gearTracker_website/tracker_app/templates/nav.html
+++ b/gearTracker_website/tracker_app/templates/nav.html
@@ -20,13 +20,14 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gear <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Camera</a></li>
-            <li><a href="#">Lens</a></li>
+            <li><a href="{% url 'tracker_app:camera' %}">Camera</a></li>
+            <li><a href="{% url 'tracker_app:lens' %}">Lens</a></li>
             <li><a href="{% url 'tracker_app:list_gear' %}">view all gear</a></li>
           </ul>
         </li>
 
         <li><a href="{% url 'tracker_app:login' %}">Login</a></li>
+        <li><a href="{% url 'tracker_app:register' %}">Register</a></li>
         <li><a href="{% url 'tracker_app:logout' %}">Logout</a></li>
 
       </ul>
