--- a/gearTracker_website/tracker_app/templates/create_return_gear.html
+++ b/gearTracker_website/tracker_app/templates/create_return_gear.html
@@ -24,7 +24,7 @@
 		{% endfor %}
 		</div> 		
 
-		<a href="{% url 'tracker_app:list_gear' %}">view all gear</a>
+		{# <a href="{% url 'tracker_app:list_gear' %}">view all gear</a> #}
 
 	{% else %}
 		<h2>Return Gear</h2>
